@startuml 扎染项目类图

left to right direction

skinparam class {
    backgroundColor #F0F8FF
    borderColor #333333
    arrowColor #666666
    backgroundColor<<interface>> #E0F8E0
    borderColor<<interface>> #2E8B57
}

' 枚举类
enum TransitionType {
    Fade
    Wipe
    Slide
    Zoom
    TieDyeWipe
    Dissolve
    Custom
}

' 数据类
class PatternData {
    -int patternId
    -string patternName
    -Color[] colors
    -float[] parameters
    -Texture2D patternTexture
    +GetPatternId() int
    +GetPatternName() string
    +GetColors() Color[]
    +GetParameters() float[]
    +GetPatternTexture() Texture2D
}

class DesignData {
    -int designId
    -string designName
    -PatternData patternData
    -DateTime createTime
    -string thumbnailPath
    +GetDesignId() int
    +GetDesignName() string
    +GetPatternData() PatternData
    +GetCreateTime() DateTime
    +GetThumbnailPath() string
}

class HistoryRecord {
    -int recordId
    -DesignData designData
    -DateTime accessTime
    +GetRecordId() int
    +GetDesignData() DesignData
    +GetAccessTime() DateTime
}

' 管理器类
class GameManager {
    -static GameManager _instance
    -List<PatternData> patterns
    -List<DesignData> designs
    -int currentDesignId
    -bool isInitialized
    +Instance GameManager
    +Initialize() void
    +GetPatterns() List<PatternData>
    +SaveDesign(DesignData design) bool
    +GetDesign(int designId) DesignData
    +GetCurrentDesign() DesignData
    +SetCurrentDesign(int designId) void
    +LoadScene(string sceneName) void
}

class SceneTransitionManager {
    -static SceneTransitionManager _instance
    -Image transitionImage
    -float transitionDuration
    -float tieDyeSpeed
    -Color transitionColor
    -Color tieDyeColor1
    -Color tieDyeColor2
    -bool isTransitioning
    +Instance SceneTransitionManager
    +Initialize() void
    +TransitionToScene(string sceneName) void
    +TransitionToScene(string sceneName, TransitionType type) void
    -PlayTransitionIn(TransitionType type) IEnumerator
    -PlayTransitionOut(TransitionType type) IEnumerator
    +IsTransitioning() bool
    +SetTransitionDuration(float duration) void
    +SetTieDyeSpeed(float speed) void
    +SetTransitionColor(Color color) void
    +SetTieDyeColors(Color color1, Color color2) void
}

class UIResourceManager {
    -static UIResourceManager _instance
    -Dictionary<string, Sprite> spriteCache
    -Dictionary<string, GameObject> prefabCache
    -string uiSpritePath
    -string uiPrefabPath
    +Instance UIResourceManager
    +LoadSprite(string spriteName, bool useCache = true) Sprite
    +LoadPrefab(string prefabName, bool useCache = true) GameObject
    +InstantiateUI(string prefabName, Transform parent = null, bool useCache = true) GameObject
    +ClearCache(string resourceName) void
    +ClearAllCache() void
    +LogCacheInfo() void
    +PreloadResources(List<string> spriteNames, List<string> prefabNames) void
}

class TecCanvasManager {
    -List<Transform> firstLevelElements
    -Dictionary<int, List<Transform>> secondLevelElements
    -int currentSecondLevelIndex
    -float fadeDuration
    -float scaleDuration
    -Ease fadeEase
    -Ease scaleEase
    +OnFirstLevelElementClick(int index) void
    -CollectFirstLevelElements() void
    -CollectSecondLevelElements() void
    -InitializeUI() void
    -PlayFirstLevelClickAnimation(int index) void
    -ShowSecondLevelElements(int firstLevelIndex) void
    -HideSecondLevelElements(int firstLevelIndex) void
}

' 系统类
class TieDyeSystem {
    -static TieDyeSystem _instance
    -int currentPatternId
    -Color[] currentColors
    -float[] currentParameters
    -Texture2D currentPatternTexture
    +Instance TieDyeSystem
    +GeneratePattern(int patternId, Color[] colors, float[] parameters) Texture2D
    +UpdatePatternParameters(float[] parameters) Texture2D
    +ChangePatternColors(Color[] colors) Texture2D
    +ApplyPatternTemplate(int templateId) Texture2D
    +GetPatternPreview() Texture2D
    +ExportPatternTexture() Texture2D
}

class HistorySystem {
    -static HistorySystem _instance
    -List<HistoryRecord> historyRecords
    -int maxRecords
    +Instance HistorySystem
    +AddRecord(DesignData designData) bool
    +GetHistoryRecords() List<HistoryRecord>
    +DeleteRecord(int recordId) bool
    +DeleteAllRecords() bool
    +GetRecentRecords(int count) List<HistoryRecord>
    +SearchRecords(string keyword) List<HistoryRecord>
}

class TechniqueSystem {
    -static TechniqueSystem _instance
    -List<TechniqueStep> techniqueSteps
    +Instance TechniqueSystem
    +GetTechniqueSteps() List<TechniqueStep>
    +GetStepDetail(int stepId) TechniqueStep
    +PlayStepAnimation(int stepId) void
    +PauseStepAnimation() void
    +ResumeStepAnimation() void
    +StopStepAnimation() void
}

class TechniqueStep {
    -int stepId
    -string stepTitle
    -string stepDescription
    -string imagePath
    -string animationPath
    +GetStepId() int
    +GetStepTitle() string
    +GetStepDescription() string
    +GetImagePath() string
    +GetAnimationPath() string
}

' 类之间的关系
GameManager --> PatternData : 包含
GameManager --> DesignData : 包含
GameManager --> SceneTransitionManager : 使用

SceneTransitionManager --> TransitionType : 使用

HistorySystem --> HistoryRecord : 包含
HistoryRecord --> DesignData : 包含
DesignData --> PatternData : 包含

TieDyeSystem --> PatternData : 生成
TieDyeSystem --> TransitionType : 使用

TechniqueSystem --> TechniqueStep : 包含

UIResourceManager --> TieDyeSystem : 使用
UIResourceManager --> GameManager : 使用

TecCanvasManager --> UIResourceManager : 使用

' 单例关系
GameManager ..> GameManager : 单例
SceneTransitionManager ..> SceneTransitionManager : 单例
UIResourceManager ..> UIResourceManager : 单例
TieDyeSystem ..> TieDyeSystem : 单例
HistorySystem ..> HistorySystem : 单例
TechniqueSystem ..> TechniqueSystem : 单例

@enduml